# scl3

./: .gitignore  .gitmodules  Cargo.toml  scl3.toml  todo.md
.cargo/: config.toml
scl3/: Cargo.toml
scl3/src/: avatar.rs  callbacks.rs  config.rs  gloabal.rs  lib.rs  main.rs  pages.rs  ui_sync.rs
scl3/ui/: app-window.slint  download-bar.slint  header.slint  launcher.slint
scl3/ui/base/: focusborders.slint  iconbutton.slint  page-container.slint
scl3/ui/pages/: dir-choose.slint  game-download.slint  game-version-choose.slint  java-choose.slint  launcher.slint  login-offline.slint  login.slint  microsoft-login.slint  mod-choosejar.slint  mod-search.slint  settings.slint
