[package]
name = "scl3"
version = "0.1.0"
edition = "2024"


[dependencies]
slint = {version = "1.16.1", features = ["backend-winit", "renderer-femtovg"] }
scl-core = { path = "../deps/core" }
scl-gui-animation = { path = "../deps/gui-animation" }
# scl-macro = { path = "../deps/macro" }
clapfig = "0.21.4"
confique = { version = "0.4", features = ["toml"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
dirs = "5"
keyring = "3.0"
secrecy = "0.10.3"
image = { version = "0.24", default-features = false, features = ["png"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync"] }
[build-dependencies]
slint-build = "1.16.1"

[profile.release]
codegen-units = 1
lto = true
